Fix layout on mobile

--- a/src/components/Admin/Login/Login.scss
+++ b/src/components/Admin/Login/Login.scss
@@ -13,7 +13,11 @@
   flex-flow: row wrap;
   justify-content: center;
   align-items: center;
-  margin-top: -10rem;
+  margin-top: -5rem;
+
+  @media screen and (min-width: 510px) {
+    margin-top: -10rem;
+  }
 }
 
 .login__container {
@@ -25,9 +29,6 @@
   padding: 3rem;
   width: 400px;
   border-radius: 10px;
-}
-
-.login__form {
 }
 
 .login__logo {
